--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="text-gray-600 mb-4">
                         Learn AWS Virtual Private Cloud (VPC) through interactive simulations. Configure subnets, security groups, and more in a safe environment.
                     </p>
-                    <a href="./vps-concepts" class="text-blue-600 font-semibold hover:underline">Try VPS-Concepts</a>
+                    <a href="./vpc-concepts" class="text-blue-600 font-semibold hover:underline">Try VPS-Concepts</a>
                 </div>
                 <!-- Template for Future Apps -->
                 <!--
