Updated section header

--- a/vpc-concepts/index.html
+++ b/vpc-concepts/index.html
@@ -279,7 +279,7 @@
                 </div>
             </div>
             <div class="concept-card">
-                <div class="concept-header">Route Tables In-Depth<span>▼</span></div>
+                <div class="concept-header">Route Tables<span>▼</span></div>
                 <div class="concept-content">
                     <p><strong>What is it?</strong> A set of rules, called routes, that determine where network traffic from your subnet or gateway is directed. Each VPC has a main route table (default for subnets not explicitly associated with another). You can create custom route tables.</p>
                     <p><strong>Key Components:</strong> Destination (CIDR block), Target (e.g., IGW, VPG, NAT Gateway, Peering Connection, ENI, VPC Endpoint).</p>
